tests/errors/invalid_uescape0.pyx

u'\u'

_ERRORS = '''
2:2: Invalid unicode escape '\u'
'''
